cleaned up DSTaintObject changes